<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SplashScreen!</string>
    <string name="app_name">Tractivity</string>
    <string name="version">Tractivity - V1.1</string>
    <string name="sync_preference">Sync Preference</string>
    <string name="is_alarm_set">IsAlarmSet</string>
    <string name="image_desc">Image</string>
    <string name="network_name">Network Name</string>
    <string name="host_address">Host Address</string>
    <string name="port">Port</string>
    <string name="local_path">Local Path</string>
    <string name="attempting_connection">Attempting connection</string>
    <string name="connection_established">Connection established</string>
    <string name="connect">Connect</string>
    <string name="unknown_server">Unknown server</string>
    <string name="remember_network">Remember Network</string>
    <string name="no_network">no network</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="password_matches">Password Matches</string>
    <string name="attempting_login">Attempting Login</string>
    <string name="login">Log In</string>
    <string name="history">History</string>
    <string name="jobs_by_emp">Jobs by Emp</string>
    <string name="hours_by_emp">Hours by Emp</string>
    <string name="hours_by_job">Hours by Job</string>
    <string name="my_jobs">My Jobs</string>
    <string name="my_hours">My Hours</string>
    <string name="my_hours_by_job">My Hours by Job</string>
    <string name="enter_job">Enter Job</string>
    <string name="begin_job">Begin Job</string>
    <string name="all_lunch">All Lunch</string>
    <string name="all_return">All Return</string>
    <string name="begin_lunch">Begin Lunch</string>
    <string name="return_lunch">Return Lunch</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_details_w2s">W2S</string>
    <string name="end_day">End Day   </string>
    <string name="success">Success</string>
    <string name="pending">Pending</string>
    <string name="choose_job_detail">Choose Job Detail Type</string>
    <string name="enter_note">Enter Note</string>
    <string name="enter_material">Enter Material</string>
    <string name="enter_etc">Enter ETC</string>
    <string name="enter_quantity">Enter Qty</string>
    <string name="server_connection">Server Connection</string>
    <string name="help">Help</string>
    <string name="network_memory">Network Memory</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="employee_login">Employee Login</string>
    <string name="config">Config</string>
    <string name="empId">empId</string>
    <string name="login_name">loginname</string>
    <string name="emp_name">empname</string>
    <string name="emp_hours_cache_list">Emp Hours cache list</string>
    <string name="job_hours_cache_list">Job Hours cache list</string>
    <string name="hours_by_employee_code_cached">Cached Employee Code</string>
    <string name="hours_by_employee_start_time_cached">Cached Employee Starttime</string>
    <string name="workgroup">workgroup</string>
    <string name="user_type">usertype</string>
    <string name="supervisor">supervisor</string>
    <string name="manager">manager</string>
    <string name="jobrev">jobrev</string>
    <string name="emplist">emplist</string>
    <string name="superlist">superlist</string>
    <string name="enablegps">enablegps</string>
    <string name="mpn">mpn</string>
    <string name="mqty">mqty</string>
    <string name="etc">etc</string>
    <string name="qty">qty</string>
    <string name="pn">pn</string>
    <string name="w2s">w2s</string>
    <string name="choose_employee">Choose Employee:</string>
    <string name="choose_employee_hint">Employee Name/Id&#8230;</string>
    <string name="choose_job">Enter/Choose Job:</string>
    <string name="choose_job_hint">Job Name/Id&#8230;</string>
    <string name="choose_job_phase">Enter/Choose Job Phase:</string>
    <string name="choose_job_phase_hint">JobPhase Name/Id&#8230;</string>
    <string name="choose_activity">Choose Activity:</string>
    <string name="choose_activity_hint">Activity Name/Id&#8230;</string>
    <string name="accept_job">Accept Job</string>
    <string name="accept">Accept</string>
    <string name="previous_job_text">Successfully loaded previous job</string>
    <string name="cancel">Cancel</string>
    <string name="job_details">Job Details</string>
    <string name="note">Note</string>
    <string name="note_hint">Tap and type Job Note&#8230;</string>
    <string name="material">Material</string>
    <string name="choose_material">Choose Material:</string>
    <string name="choose_material_hint">Material Name/Id</string>
    <string name="quantity">Quantity:</string>
    <string name="quantity_hint">Material Quantity</string>
    <string name="etc_header">ETC</string>
    <string name="time_left">Time Left(Hours):</string>
    <string name="enter_value">Enter Value&#8230;</string>
    <string name="qty_header">QTY</string>
    <string name="id">id</string>
    <string name="qty_completed">Quantity Completed:</string>
    <string name="send_database">Send Database</string>

    <color name="white_clr">#ffffff</color>
    <color name="black_clr">#000000</color>
    <color name="blue_clr">#3b92d1</color>
    <color name="slategray">#708090</color>
    <color name="gray">#778899</color>
    <color name="light_grey">#E8E8E8</color>
    <color name="textwithunderlinecolor">#EC6B0A</color>
    <color name="lime">#00FF00</color>
    <color name="red_clr">#D7432C</color>


    <string name="title_activity_tractivity">TractivityActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tractivity_info">iTrac by Tractivity</string>
    <!--Job Details-->
    <string name="scan_barcode_alert_message">Scan Barcode Using</string>


</resources>