<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_clr"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" >

        <TextView
            style="@style/tractivity_textview_style"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/user_name"
            android:singleLine="true" />

        <TextView
            style="@style/tractivity_textview_style"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/progress_textID"
            style="@style/tractivity_textview_style"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/login_textID"
            style="@style/tractivity_textview_style"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:drawableBottom="@drawable/login_selector"
            android:drawablePadding="10dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>