<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_clr"
    android:orientation="vertical"
    android:fillViewport="true"
    android:padding="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/about_back_textID"
            style="@style/tractivity_textview_style"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/back"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                style="@style/tractivity_textview_style"
                android:text="@string/tractivity_info"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_app_version_textID"
                style="@style/tractivity_textview_style"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_sync_status_textID"
                style="@style/tractivity_textview_style"
                android:layout_marginTop="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_active_url_textID"
                style="@style/tractivity_textview_style"
                android:layout_marginTop="20dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about_last_sync_attempt_textID"
                style="@style/tractivity_textview_style"
                android:layout_marginTop="20dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_sync_success_textID"
                style="@style/tractivity_textview_style"
                android:layout_marginTop="10dp"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/about_db_size_textID"
                    style="@style/tractivity_textview_style"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/about_send_db_textID"
                    style="@style/tractivity_textview_style"
                    android:layout_alignParentRight="true"
                    android:text="@string/send_database"
                    android:textSize="20sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/about_element_count_textID"
                style="@style/tractivity_textview_style"
                android:layout_marginTop="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_get_jobs_time_textID"
                style="@style/tractivity_textview_style"
                android:layout_marginTop="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_get_jobs_average_textID"
                style="@style/tractivity_textview_style"
                android:layout_marginTop="10dp"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>